# metaverse

./: .env.example  .gitignore  CURRENT_STATUS.md  NEXT_STEPS.md  OWNER_ACTION_REQUIRED.md  PROJECT_DNA.md  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
agents/: README.md  __init__.py  analytics_agent.py  approval_agent.py  archivist.py  base.py  coding_agent.py  compliance.py  compliance_agent.py  content_agent.py  dashboard_agent.py  deployment_agent.py  dns_website_agent.py  documentation_agent.py  github_backup_agent.py  hermes.py  jarvis.py  nemotron_reasoning_agent.py  openclaw.py  openclaw_skill_agent.py  research_agent.py  security_agent.py  sentinel.py  social_publishing_agent.py  video_agent.py  worker_base.py
approval/: __init__.py  __main__.py  approval_queue.py  cli.py
architecture/: BUILD_GAP_ANALYSIS.md  CREATIVE_STUDIO_PLAN.md  DEPARTMENT_SKILL_MAP.md  MASTER_ENDPOINT_RUBRIC.md  PLUGIN_PROVIDER_MAP.md  agent_architecture.md  architecture_overview.md
auth/: __init__.py  passwords.py  service.py  sessions.py  twofa.py
config/: README.md  model_budget.json  openclaw_allowlist.json  project_context.json  settings.example.json  sports.json
constitution/: approval_rules.md  constitution.md
core/: __init__.py  config.py  console.py  llm_router.py  logging_setup.py  paths.py  policy.py
creative/: __init__.py  __main__.py  models.py  render.py  store.py  storyboard.py
dashboard/: __init__.py  __main__.py  app.py  data.py  render.py  server.py  studio.py
deployment/: nginx_sportsverse_site.conf  nginx_sportverse.conf  (+2 more)
(+145 files in other folders)
